@@ -457,12 +457,38 @@ SOFTWARE.
 
 //*************************************
 // Determine if the ETL can use libc's wchar.h
+#if !defined(ETL_NO_LIBC_WCHAR_H)
+  #if defined(__has_include)
+    #if !__has_include(<wchar.h>)
+        #define ETL_NO_LIBC_WCHAR_H
+    #endif
+  #endif
+#endif
+
 #if defined(ETL_NO_LIBC_WCHAR_H)
   #define ETL_USING_LIBC_WCHAR_H     0
   #define ETL_NOT_USING_LIBC_WCHAR_H 1
 #else
   #define ETL_USING_LIBC_WCHAR_H     1
   #define ETL_NOT_USING_LIBC_WCHAR_H 0
+#endif
+
+//*************************************
+// Determine if the ETL can use STL ostream
+#if !defined(ETL_NO_STD_OSTREAM) && ETL_USING_STL
+  #if defined(__has_include)
+    #if !__has_include(<ostream>)
+      #define ETL_NO_STD_OSTREAM
+    #endif
+  #endif
+#endif
+
+#if defined(ETL_NO_STD_OSTREAM) || (ETL_NOT_USING_STL && !defined(ETL_IN_UNIT_TEST))
+  #define ETL_USING_STD_OSTREAM     0
+  #define ETL_NOT_USING_STD_OSTREAM 1
+#else
+  #define ETL_USING_STD_OSTREAM     1
+  #define ETL_NOT_USING_STD_OSTREAM 0
 #endif
 
 //*************************************
